--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -14,7 +14,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-
+.home-links {
+  color: #212529 !important;
+  text-decoration: none;
+  background-color: transparent;
+  border-bottom: 2px dotted lightgray !important;
+}
+@media screen and (max-width: 768px) {
+  .mobile-page {
+    margin-bottom: 1em;
+  }
+}
 /* font families */
 h1,
 h2,
